# timps-swarm

./: .gitignore  AGENTS.md  CHANGELOG.md  CURSOR_SETUP.md  Dockerfile.swarm  LICENSE  Makefile  NOTICE  README.md  THIRD-PARTY-LICENSES.spdx  WINDSURF_SETUP.md  build_clean_dataset.py  docker-compose.yml  fix_fences.py  give_work.py  index.html  install.sh  mcp.json  pyproject.toml  requirements.txt  retrain-specialized.sh  test_all_adapters.py  test_computer_allocation.py  timps_cli.py
.claude/: mcp.json
.claude/agents/: timps-ab_testing_agent.md  timps-abdm_agent.md  timps-accessibility_tester.md  timps-adr_writer.md  timps-agent_composer.md  timps-agent_marketplace_curator.md  timps-agri_commodity_forecaster.md  timps-ai_safety_agent.md  timps-ai_workflow_orchestrator.md  timps-analytics_agent.md  timps-api_contract_auditor.md  timps-api_design_agent.md  timps-api_perf_profiler.md  timps-api_security_tester.md  timps-backup_sentinel.md  timps-batch.md  timps-battery_analyst.md  timps-boilerplate_architect.md  timps-browser_automation.md  timps-calendar_optimizer.md  timps-certificate_rotator.md  timps-changelog_generator.md  timps-churn_predictor.md  timps-cli_tool_agent.md  timps-cloud_cost_auditor.md  timps-code_archaeology.md  timps-cold_email_sequence_writer.md  timps-competitor_tracker.md  timps-compliance_auditor.md  timps-computer_use_agent.md  (+131 more)
cli/: README.md  package-lock.json  package.json
dashboard/: package-lock.json  package.json
demo/: generate-gif.py  index.html  openapi-spec.yaml
mcp_server/: server.py
scripts/: nginx.conf  pull-models.sh
src/: __init__.py  _helpers.py  adapter_router.py  agent_kernel.py  agents.py  auto_spawner.py  computer_use.py  context_sharing.py  developer_swarm_agents.py  graph.py  intelligence_agents.py  knowledge_swarm_agents.py  layer1_computer_manager.py  layer2_swarm_bridge.py  layer3_swarm_cli.py  llm_router.py  main.py  more_agents.py  observer.py  priority_agents.py  state.py  system_tools.py  tool_connectors.py
timps_swarm_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+80 files in other folders)
