[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timps-swarm-mcp"
version = "1.0.0"
description = "TIMPS Swarm — 22 AI agents for code generation and computer health, as an MCP plugin"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "ai", "agents", "swarm", "llm", "computer-health", "code-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "langgraph>=0.2.60",
    "langchain>=0.3.0",
    "langchain-core>=0.2.42",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "requests>=2.32.3",
    "httpx>=0.27.2",
    "psutil>=6.1.0",
    "playwright>=1.49.0",
    "aiohttp>=3.11.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "black", "ruff"]
ml  = ["transformers>=4.46.0", "peft>=0.13.2", "huggingface-hub>=0.26.0"]

[project.scripts]
# CLI entry points — installed by `pip install timps-swarm-mcp`
timps-mcp   = "mcp_server.server:run_server"
timps       = "timps_cli:main"
timps-swarm = "give_work:main"

[project.urls]
Homepage   = "https://github.com/Sandeeprdy1729/timps-swarm"
Repository = "https://github.com/Sandeeprdy1729/timps-swarm"
Issues     = "https://github.com/Sandeeprdy1729/timps-swarm/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "mcp_server*"]

[tool.setuptools.package-data]
"mcp_server" = ["*.json", "*.md"]

# timps_cli.py is a top-level module — included automatically by setuptools

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
